responsive web design was added to min-width of 200px, 320px, 768px, 1200px and 1600px

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 		<div class="color-generator__btn">
 			<button class="btn">
-				Change Color
+				change color
 			</button>
 		</div>
 	</div>
